Add Open Graph meta tags for LinkedIn/social preview with aboutmepic.jpg as og:image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>John Andrei Nañola - Virtual Assistant Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <meta property="og:title" content="Virtual Assistant Portfolio - John Andrei Nañola" />
+    <meta property="og:description" content="Versatile Virtual Assistant | Web Development | Social Media | Graphic Design | Business Support" />
+    <meta property="og:url" content="https://andrei13spot.github.io/" />
+    <meta property="og:image" content="https://andrei13spot.github.io/aboutmepic.jpg" />
 </head>
 <body class="dark">
     <!-- Loading Screen -->
