Reduce about section gap and justify text

--- a/index.html
+++ b/index.html
@@ -487,12 +487,12 @@
             </div>
         </section>
 
-        <!-- About Section (add versatility emphasis) -->
+        <!-- About Section (full width, grid layout, updated stats) -->
         <section id="about" class="section">
             <div class="floating-element"></div>
             <h2 class="section-title fade-in">About Me</h2>
             <p class="section-subtitle fade-in">A relationship-driven professional passionate about helping businesses grow through exceptional client support and technical expertise</p>
-            <div class="about-grid">
+            <div class="about-grid" style="display: grid; grid-template-columns: 1fr 1fr; align-items: center;">
                 <div class="about-image slide-in-left">
                     <img src="aboutmepic.jpg" alt="John Andrei Nañola" />
                 </div>
@@ -509,12 +509,12 @@
                             <div class="stat-label">Years Experience</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number" data-target="80">0</div>
-                            <div class="stat-label">Calls/Day</div>
+                            <div class="stat-number" data-target="15">0</div>
+                            <div class="stat-label">Skills Mastered</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number" data-target="98">0</div>
-                            <div class="stat-label">Accuracy Rate</div>
+                            <div class="stat-number" data-target="12">0</div>
+                            <div class="stat-label">Projects Completed</div>
                         </div>
                     </div>
                 </div>
@@ -531,7 +531,7 @@
     <footer class="footer">
         <div class="footer-content">
             <h3>John Andrei Nañola</h3>
-            <p>Virtual Assistant & CRM Specialist | Building meaningful relationships and driving business growth</p>
+            <p>Aspiring Virtual Assistant with Versatility | Building meaningful relationships and driving business growth</p>
             <div class="social-links">
                 <a href="https://github.com/andrei13spot" target="_blank" class="social-link">
                     <i class="fab fa-github"></i>
