Add Alison certificate: Roles and Responsibilities of Virtual Assistants, and update index.html

--- a/index.html
+++ b/index.html
@@ -228,6 +228,19 @@
                             View Certificate
                         </a>
                     </div>
+                    
+                    <div class="certificate-card scale-in">
+                        <div class="certificate-icon">
+                            <i class="fas fa-tasks"></i>
+                        </div>
+                        <div class="certificate-title">Roles and Responsibilities of Virtual Assistants</div>
+                        <div class="certificate-issuer">Alison (CPD Certified)</div>
+                        <div class="certificate-description">Comprehensive certification covering the essential roles, responsibilities, and best practices for virtual assistants. Demonstrates deep understanding of VA industry standards and client service excellence.</div>
+                        <a href="https://drive.google.com/file/d/1v4kM6ToMbr-nrYHZ6k8zIdLFaTLtY2nw/view?usp=sharing" target="_blank" class="certificate-btn">
+                            <i class="fas fa-external-link-alt"></i>
+                            View Certificate
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
