--- a/index.html
+++ b/index.html
@@ -80,11 +80,15 @@
                 <div class="skill-category scale-in">
                     <h4><i class="fas fa-users"></i> Relationship Management</h4>
                     <ul class="skill-list">
-                <li>Client Relationship Management</li>
+                        <li>Client Relationship Management</li>
                         <li>Customer Service & Escalation</li>
                         <li>Client Communication & Follow-ups</li>
                         <li>Client Onboarding & Training</li>
                         <li>Proactive Problem-Solving</li>
+                        <li>Executive & Personal Assistance</li>
+                        <li>Confidential Task Handling</li>
+                        <li>Travel & Calendar Management</li>
+                        <li>Professional Communication</li>
                     </ul>
                 </div>
                 
@@ -102,11 +106,13 @@
                 <div class="skill-category scale-in">
                     <h4><i class="fas fa-tasks"></i> Business Operations</h4>
                     <ul class="skill-list">
-                <li>Calendar & Schedule Management</li>
-                <li>Email Handling & Inbox Organization</li>
-                <li>Document Formatting & Data Entry</li>
+                        <li>Calendar & Schedule Management</li>
+                        <li>Email Handling & Inbox Organization</li>
+                        <li>Document Formatting & Data Entry</li>
                         <li>Social Media Scheduling</li>
-                <li>File Organization (Google Drive, Dropbox)</li>
+                        <li>File Organization (Google Drive, Dropbox)</li>
+                        <li>Travel Arrangements & Itinerary Planning</li>
+                        <li>Meeting Coordination & Minute Taking</li>
                     </ul>
                 </div>
                 
@@ -237,6 +243,18 @@
                         <div class="certificate-issuer">Alison (CPD Certified)</div>
                         <div class="certificate-description">Comprehensive certification covering the essential roles, responsibilities, and best practices for virtual assistants. Demonstrates deep understanding of VA industry standards and client service excellence.</div>
                         <a href="https://drive.google.com/file/d/1v4kM6ToMbr-nrYHZ6k8zIdLFaTLtY2nw/view?usp=sharing" target="_blank" class="certificate-btn">
+                            <i class="fas fa-external-link-alt"></i>
+                            View Certificate
+                        </a>
+                    </div>
+                    <div class="certificate-card scale-in">
+                        <div class="certificate-icon">
+                            <i class="fas fa-user-secret"></i>
+                        </div>
+                        <div class="certificate-title">How to Become an Executive Personal Assistant</div>
+                        <div class="certificate-issuer">Alison (CPD Certified)</div>
+                        <div class="certificate-description">Certification covering advanced executive support, calendar and travel management, professional communication, and high-level organizational skills. Demonstrates expertise in supporting executives and managing confidential tasks.</div>
+                        <a href="https://drive.google.com/file/d/1hOhh5P3ArvQ52u-_Czc62oxfaEK2xLya/view?usp=sharing" target="_blank" class="certificate-btn">
                             <i class="fas fa-external-link-alt"></i>
                             View Certificate
                         </a>
