Updated About Me

--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                     <div class="about-name-container">
                         <h3 class="about-name">John Andrei Nañola</h3>
                         <div class="name-underline"></div>
-                        <p class="about-title">Virtual Assistant</p>
+                        <p class="about-title">Virtual Assistant with Versatility</p>
                     </div>
                 </div>
                 <div class="about-content slide-in-right">
