Added Administrative Support certificate and updated skills

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
                 <li>File Organization (Google Drive, Dropbox)</li>
                         <li>Travel Arrangements & Itinerary Planning</li>
                         <li>Meeting Coordination & Minute Taking</li>
+                        <li>Office Management & Administrative Support</li>
+                        <li>Document Management & Filing Systems</li>
+                        <li>Process Optimization & Workflow Management</li>
                     </ul>
                 </div>
                 
@@ -262,6 +265,19 @@
                     <div class="certificate-issuer">Alison (CPD Certified)</div>
                     <div class="certificate-description">Certification covering advanced executive support, calendar and travel management, professional communication, and high-level organizational skills. Demonstrates expertise in supporting executives and managing confidential tasks.</div>
                     <a href="https://drive.google.com/file/d/1hOhh5P3ArvQ52u-_Czc62oxfaEK2xLya/view?usp=sharing" target="_blank" class="certificate-btn">
+                        <i class="fas fa-external-link-alt"></i>
+                        View Certificate
+                    </a>
+                </div>
+
+                <div class="certificate-card scale-in">
+                    <div class="certificate-icon">
+                        <i class="fas fa-clipboard-list"></i>
+                    </div>
+                    <div class="certificate-title">Administrative Support</div>
+                    <div class="certificate-issuer">Alison (CPD Certified)</div>
+                    <div class="certificate-description">Comprehensive certification in administrative support, office management, and organizational skills. Covers document management, scheduling, communication, and efficient office operations to support business productivity.</div>
+                    <a href="https://drive.google.com/file/d/1gOZK5WdX9cHM104fuy_uSoAZDCsxwhgE/view?usp=sharing" target="_blank" class="certificate-btn">
                         <i class="fas fa-external-link-alt"></i>
                         View Certificate
                     </a>
@@ -603,7 +619,7 @@
                             <div class="stat-label">Skills Mastered</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number" data-target="5">0</div>
+                            <div class="stat-number" data-target="6">0</div>
                             <div class="stat-label">Certifications</div>
                         </div>
                     </div>
