Centered certificate icons and moved Administrative Support to hidden section

--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@
                     </a>
                 </div>
 
-                <div class="certificate-card scale-in">
+                <!-- Hidden certificates (initially) -->
+                <div class="certificate-card scale-in hidden-cert">
                     <div class="certificate-icon">
                         <i class="fas fa-clipboard-list"></i>
                     </div>
@@ -283,7 +284,6 @@
                     </a>
                 </div>
 
-                <!-- Hidden certificates (initially) -->
                 <div class="certificate-card scale-in hidden-cert">
                     <div class="certificate-icon">
                         <i class="fas fa-crown"></i>
