Update Alorica job title to Inbound Sales Representative (B2B Telco Account)

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 
                 <div class="timeline-item slide-in-left">
                     <div class="timeline-content">
-                        <div class="timeline-title">Customer Service Representative/Inbound Sales (Telco Account)</div>
+                        <div class="timeline-title">Inbound Sales Representative (B2B Telco Account)</div>
                         <div class="timeline-company">Alorica Cubao</div>
                         <div class="timeline-date">April 2024 - Nov 2024</div>
                         <div class="timeline-description">Handled billing, troubleshooting, and sales inquiries. Awarded by the client as top sales and best Customer Service Representative (June-July).</div>
