Added: Achievements Section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <a href="#" class="dropdown-toggle">Portfolio <i class="fas fa-caret-down"></i></a>
                     <ul class="dropdown-menu">
                         <li><a href="#certificates">Certificates</a></li>
+                        <li><a href="#achievements">Achievements</a></li>
                         <li><a href="#graphic-design">Graphic Design</a></li>
                         <li><a href="#social-media">Social Media</a></li>
                         <li><a href="#development">Development</a></li>
@@ -304,6 +305,66 @@
                     <span class="show-more-text">Show More</span>
                     <i class="fas fa-chevron-down"></i>
                 </button>
+            </div>
+        </section>
+
+        <!-- Achievements Section -->
+        <section id="achievements" class="section">
+            <h2 class="section-title fade-in">Achievements & Awards</h2>
+            <p class="section-subtitle fade-in">Recognition for outstanding performance and commitment to excellence</p>
+            
+            <div class="certificates-grid">
+                <div class="certificate-card scale-in">
+                    <div class="certificate-icon">
+                        <i class="fas fa-trophy"></i>
+                    </div>
+                    <div class="certificate-title">Top QA Score</div>
+                    <div class="certificate-issuer">Teleperformance</div>
+                    <div class="certificate-description">Achieved the highest quality assurance score, demonstrating a commitment to excellence and high-quality customer service.</div>
+                    <a href="https://drive.google.com/file/d/1blgjkPnSX6YjEWe-J5-cPeLz4RgTn_78/view?usp=sharing" target="_blank" class="certificate-btn">
+                        <i class="fas fa-external-link-alt"></i>
+                        View Award
+                    </a>
+                </div>
+
+                <div class="certificate-card scale-in">
+                    <div class="certificate-icon">
+                        <i class="fas fa-trophy"></i>
+                    </div>
+                    <div class="certificate-title">Top 1 Agent (Kroger LOB)</div>
+                    <div class="certificate-issuer">Teleperformance</div>
+                    <div class="certificate-description">Recognized as the top-performing agent for the Kroger line of business, excelling in service and performance metrics.</div>
+                    <a href="https://drive.google.com/file/d/1s2fd1jr2TM9fo7PAQGmmhHb6KEZzy4Sq/view?usp=sharing" target="_blank" class="certificate-btn">
+                        <i class="fas fa-external-link-alt"></i>
+                        View Award
+                    </a>
+                </div>
+
+                <div class="certificate-card scale-in">
+                    <div class="certificate-icon">
+                        <i class="fas fa-trophy"></i>
+                    </div>
+                    <div class="certificate-title">Top 1 Agent (FSV LOB)</div>
+                    <div class="certificate-issuer">Teleperformance</div>
+                    <div class="certificate-description">Awarded as the #1 agent for the Financial Services line of business, showcasing exceptional skill in a demanding environment.</div>
+                    <a href="https://drive.google.com/file/d/182AU8JgVGPDCwBpqYTEvXRyKKhocoUAZ/view?usp=sharing" target="_blank" class="certificate-btn">
+                        <i class="fas fa-external-link-alt"></i>
+                        View Award
+                    </a>
+                </div>
+
+                <div class="certificate-card scale-in">
+                    <div class="certificate-icon">
+                        <i class="fas fa-trophy"></i>
+                    </div>
+                    <div class="certificate-title">Top 1 Agent</div>
+                    <div class="certificate-issuer">IQOR</div>
+                    <div class="certificate-description">Recognized as the top agent at IQOR for outstanding sales performance and exceptional customer support for technical and billing inquiries.</div>
+                    <a href="https://drive.google.com/file/d/1hJMBshiY814R7LjAsQxrDpNyKH9208v8/view?usp=drive_link" target="_blank" class="certificate-btn">
+                        <i class="fas fa-external-link-alt"></i>
+                        View Award
+                    </a>
+                </div>
             </div>
         </section>
 
