Mobile menu and dark mode toggle fixes; new certificate added

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <i class="fas fa-envelope"></i>
                     Get In Touch
                 </a>
-                <a href="https://drive.google.com/file/d/1PsF-wSX775Cla01RBdlN9cuPu04M_7Jd/view?usp=sharing" target="_blank" class="btn-secondary">
+                <a href="https://drive.google.com/file/d/16BgaP5PF1UIUzOQUYJVzvM1AYMAgg6HL/view?usp=sharing" target="_blank" class="btn-secondary">
                     <i class="fas fa-download"></i>
                     Download Resume
                 </a>
@@ -266,6 +266,19 @@
                     <div class="certificate-issuer">Alison (CPD Certified)</div>
                     <div class="certificate-description">Certification covering advanced executive support, calendar and travel management, professional communication, and high-level organizational skills. Demonstrates expertise in supporting executives and managing confidential tasks.</div>
                     <a href="https://drive.google.com/file/d/1hOhh5P3ArvQ52u-_Czc62oxfaEK2xLya/view?usp=sharing" target="_blank" class="certificate-btn">
+                        <i class="fas fa-external-link-alt"></i>
+                        View Certificate
+                    </a>
+                </div>
+
+                <div class="certificate-card scale-in">
+                    <div class="certificate-icon">
+                        <i class="fas fa-home"></i>
+                    </div>
+                    <div class="certificate-title">Introduction to Estate Agents</div>
+                    <div class="certificate-issuer">Alison (CPD Certified)</div>
+                    <div class="certificate-description">Certification covering the fundamentals of estate agency, property management, and real estate best practices. Demonstrates knowledge in property sales, client relations, and industry standards.</div>
+                    <a href="https://drive.google.com/file/d/1sTnzMlytO6BqR0vjhVNi5OZ6zAQc7YsC/view?usp=sharing" target="_blank" class="certificate-btn">
                         <i class="fas fa-external-link-alt"></i>
                         View Certificate
                     </a>
