Limit visible certificates to 4, move new experience to bottom, update skills and footer date

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                 <div class="skill-category scale-in">
                     <h4><i class="fas fa-users"></i> Relationship Management</h4>
                     <ul class="skill-list">
-                <li>Client Relationship Management</li>
+                        <li>Client Relationship Management</li>
                         <li>Customer Service & Escalation</li>
-                        <li>Client Communication & Follow-ups</li>
+                        <li>Client Communication (Calls, Emails, SMS)</li>
                         <li>Client Onboarding & Training</li>
                         <li>Proactive Problem-Solving</li>
                         <li>Executive & Personal Assistance</li>
@@ -106,17 +106,19 @@
                         <li>Web Development (HTML, CSS, JavaScript)</li>
                         <li>Basic MySQL Database Management</li>
                         <li>MS Office Suite Proficient</li>
+                        <li>Order Tracking & Quote Invoicing (DecoNetwork)</li>
+                        <li>SEO-related Admin Tasks</li>
                     </ul>
                 </div>
                 
                 <div class="skill-category scale-in">
                     <h4><i class="fas fa-tasks"></i> Business Operations</h4>
                     <ul class="skill-list">
-                <li>Calendar & Schedule Management</li>
-                <li>Email Handling & Inbox Organization</li>
-                <li>Document Formatting & Data Entry</li>
+                        <li>Calendar & Schedule Management</li>
+                        <li>Email Handling & Inbox Organization (Google Workspace)</li>
+                        <li>Document Formatting & Data Entry</li>
                         <li>Social Media Scheduling</li>
-                <li>File Organization (Google Drive, Dropbox)</li>
+                        <li>File Organization (Google Drive, Dropbox)</li>
                         <li>Travel Arrangements & Itinerary Planning</li>
                         <li>Meeting Coordination & Minute Taking</li>
                         <li>Office Management & Administrative Support</li>
@@ -132,9 +134,10 @@
                         <li>Report Generation & Analysis</li>
                         <li>Multi-tasking & Priority Management</li>
                         <li>Basic Graphic Design (Canva)</li>
-                <li>Typing Speed: 60-70 WPM (98-100% accuracy)</li>
-            </ul>
-        </div>
+                        <li>Typing Speed: 60-70 WPM (98-100% accuracy)</li>
+                        <li>Content Creation for Social Media</li>
+                    </ul>
+                </div>
                 <div class="skill-category scale-in">
                     <h4><i class="fas fa-share-alt"></i> Social Media Management</h4>
                     <ul class="skill-list">
@@ -142,8 +145,8 @@
                         <li>Content Creation & Scheduling</li>
                         <li>Branding & Campaigns</li>
                         <li>Engagement & Analytics</li>
-            </ul>
-        </div>
+                    </ul>
+                </div>
                 <div class="skill-category scale-in">
                     <h4><i class="fas fa-paint-brush"></i> Web & Graphic Designing</h4>
                     <ul class="skill-list">
@@ -151,8 +154,8 @@
                         <li>Brochure & Social Media Graphics</li>
                         <li>Web Design (Wix, HTML/CSS)</li>
                         <li>Tools: Canva, Picsart, Publisher, Illustrator</li>
-            </ul>
-        </div>
+                    </ul>
+                </div>
             </div>
         </section>
 
@@ -207,6 +210,19 @@
                         <div class="timeline-company">Concentrix</div>
                         <div class="timeline-date">Dec 2024 - Mar 2025</div>
                         <div class="timeline-description">Processed orders for members and handled inquiries about claims and benefits.</div>
+                    </div>
+                </div>
+                
+                <div class="timeline-item slide-in-right">
+                    <div class="timeline-content">
+                        <div class="timeline-title">General Administrative Virtual Assistant (Part-time Freelance)</div>
+                        <div class="timeline-company">MGE Custom Embroidery and Printing</div>
+                        <div class="timeline-date">June 2025 – Present</div>
+                        <div class="timeline-description">
+                            Handles customer communication (calls, emails, and SMS), order tracking, and quote invoicing using DecoNetwork.<br>
+                            Manages inboxes, client files, and scheduling via Google Workspace.<br>
+                            Content creation, social media scheduling, and SEO-related admin tasks.
+                        </div>
                     </div>
                 </div>
             </div>
@@ -271,7 +287,8 @@
                     </a>
                 </div>
 
-                <div class="certificate-card scale-in">
+                <!-- Hidden certificates (initially) -->
+                <div class="certificate-card scale-in hidden-cert">
                     <div class="certificate-icon">
                         <i class="fas fa-home"></i>
                     </div>
@@ -284,7 +301,6 @@
                     </a>
                 </div>
 
-                <!-- Hidden certificates (initially) -->
                 <div class="certificate-card scale-in hidden-cert">
                     <div class="certificate-icon">
                         <i class="fas fa-clipboard-list"></i>
@@ -713,7 +729,7 @@
     <footer class="footer">
         <div class="footer-content" style="text-align: center; padding: 10px 0; color: var(--text-color);">
             <p style="margin: 0;">© 2025 John Andrei Nañola. All rights reserved.</p>
-            <p style="margin: 5px 0 0 0; font-size: 0.9em;">Last updated: June 2025</p>
+            <p style="margin: 5px 0 0 0; font-size: 0.9em;">Last updated: July 2025</p>
         </div>
     </footer>
 
