Update MGE experience to show end date as July 2025

--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
                     <div class="timeline-content">
                         <div class="timeline-title">General Administrative Virtual Assistant (Part-time Freelance)</div>
                         <div class="timeline-company">MGE Custom Embroidery and Printing</div>
-                        <div class="timeline-date">June 2025 – Present</div>
+                        <div class="timeline-date">June 2025 – July 2025</div>
                         <div class="timeline-description">
-                            Handles customer communication (calls, emails, and SMS), order tracking, and quote invoicing using DecoNetwork.<br>
-                            Manages inboxes, client files, and scheduling via Google Workspace.<br>
+                            Handled customer communication (calls, emails, and SMS), order tracking, and quote invoicing using DecoNetwork.<br>
+                            Managed inboxes, client files, and scheduling via Google Workspace.<br>
                             Content creation, social media scheduling, and SEO-related admin tasks.
                         </div>
                     </div>
